# basedradio-rs

./: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  flake.nix  updates.json
.github/workflows/: build.yaml  desktop.yaml
api/: Cargo.toml  default.nix  module.nix
api/src/: main.rs  types.rs
app/: Cargo.toml  Dioxus.toml  Dockerfile  default.nix  module.nix
app/assets/: wasm-check.js
app/assets/style/: app.css  based98.css
app/src/: main.rs
app/src/components/: about.rs  audio.rs  mod.rs  moreinfo.rs  player.rs  settings.rs  taskbar.rs  updates.rs  visualizer.rs  window.rs  window_template.rs
app/src/components/windows/: about.rs  mod.rs  moreinfo.rs  news.rs  picture_viewer.rs  player.rs  settings.rs  updates.rs
assets/js/: draggable.js
assets/style/: app.css
src/: main.rs  vars.rs
src/components/: about.rs  audio.rs  mod.rs  player.rs  visualizer.rs  window.rs
