[package]
name = "basedradio-rs"
version = "0.1.0"
authors = ["robots"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
dioxus-sdk = { version = "0.6.0", features = ["timing"] }
reqwest = { version = "0.12.19", features = ["json", "blocking"] }
serde = { version = "1.0.219", features = ["derive"] }

web-sys = { version = "0.3.77", optional = true, features = [
    "HtmlAudioElement",
    "AudioContext",
] }

rodio = { version = "0.20.1", optional = true }
stream-download = { version = "0.21.0", optional = true }
js-sys = "0.3.77"

[features]
default = ["desktop"]
web = ["dioxus/web", "dep:web-sys"]
desktop = ["dioxus/desktop", "dep:rodio", "dep:stream-download"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
