[package]
name = "api"
version = "0.1.0"
edition = "2024"
authors = ["rpgwaiter <rpgwaiter@based.zone>"]

[dependencies]
actix-web = "4.11.0"
async-mpd = "0.6.0"
env_logger = "0.11.8"
regex = "1.11.3"
serde = { version = "1.0.219", features = ["derive"] }
urlencoding = "2.1.3"
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
icecast-stats = "0.2.2"
serde_json = "1.0.145"
