[package]
name = "basedradio-rs"
version = "0.1.0"
rust-version = "1.86"
authors = ["rpgwaiter <rpgwaiter@based.zone>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.2", features = ["router"] }
# dioxus-liveview = { version = "0.7.0" } 
dioxus-sdk = { version = "0.7.0", features = ["time"] }
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }

web-sys = { version = "0.3.81", optional = true, features = [
    "HtmlAudioElement",
    "HtmlCanvasElement",
    "AudioContext",
    "GainNode",
    "AnalyserNode",
    "BaseAudioContext",
    "MediaElementAudioSourceNode",
    "AudioDestinationNode",
    "CanvasRenderingContext2d"
] }

rodio = { version = "0.20.1", optional = true }
stream-download = { version = "0.21.0", optional = true }


[features]
default = []
web = ["dioxus/web", "dep:web-sys"]
desktop = ["dioxus/desktop", "dep:rodio", "dep:stream-download"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
